deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sg-debug-tool-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: effyis-debug-tool.k8s-dev.sgdctroy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sg-debug-tool-service
                port:
                  number: 80
